# komari

./: Cargo.toml  rust-toolchain.toml
.github/actions/setup/: action.yml
.github/workflows/: build.yml
backend/: Cargo.toml  build.rs
backend/src/: bridge.rs  buff.rs  control.rs  database.rs  debug.rs  detect.rs  ecs.rs  lib.rs  mat.rs  minimap.rs  navigator.rs  notification.rs  operation.rs  rotator.rs  run.rs  skill.rs  task.rs
backend/src/models/: action.rs  actions.rs  character.rs  keys.rs  map.rs  minimap.rs  mod.rs  settings.rs
backend/src/player/: actions.rs  double_jump.rs  exchange_booster.rs  familiars_swap.rs  idle.rs  mod.rs  moving.rs  solve_rune.rs  solve_shape.rs  state.rs  use_booster.rs  use_key.rs
backend/src/services/: character.rs  control.rs  debug.rs  game.rs  localization.rs  map.rs  minimap.rs  mod.rs  navigator.rs  operation.rs  rotator.rs  ui.rs  world.rs
backend/src/tracker/: bytetracker.rs  kalman_filter.rs  mod.rs  strack.rs
docs/: general.md
ui/: Cargo.toml
ui/public/: tailwind.css
ui/src/: actions.rs  characters.rs  localization.rs  main.rs  minimap.rs  navigation.rs  settings.rs
ui/src/components/: button.rs  checkbox.rs  file.rs  key.rs  labeled.rs  mod.rs  named_select.rs  numbers.rs  popup.rs  position.rs  select.rs  text.rs  tooltip.rs
