[workspace]
resolver = "2"
members = ["ui", "backend", "platforms"]

[workspace.package]
version = "0.23.0"
edition = "2024"

[workspace.dependencies]
log = "0.4.27"
strum = { version = "0.27.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.45.1", default-features = false, features = [
  "sync",
  "rt-multi-thread",
  "macros",
  "time",
  "test-util",
] }
rand = "0.9.1"
platforms = { path = "platforms" }
backend = { path = "backend" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
